--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "homepage": "https://github.com/nicolewallace09/food-festival#readme",
   "devDependencies": {
+    "file-loader": "^6.0.0",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "image-webpack-loader": "^6.0.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
   }
