--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-pwa-manifest": "^4.2.0"
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
